# forex-ai-platform

./: .gitignore  LICENSE  README.md  pyproject.toml
scripts/: demoo_backtest.py
src/backtest/: __init__.py  engine.py  metrics.py  walk_forward.py  walk_forward.py:Zone.Identifier
