[project]
name = "forex-ai-platform"
version = "0.1.0"
description = "AI forex research & trading platform"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26", "pandas>=2.1", "pydantic>=2.5", "pydantic-settings>=2.1",
  "httpx>=0.26", "fastapi>=0.110", "uvicorn[standard]>=0.27",
  "sqlalchemy>=2.0", "psycopg[binary]>=3.1", "redis>=5.0", "celery>=5.3",
  "pyjwt>=2.8", "passlib[bcrypt]>=1.7", "prometheus-client>=0.19",
  "python-dotenv>=1.0",
]
[project.optional-dependencies]
ml = ["scikit-learn>=1.4", "xgboost>=2.0", "lightgbm>=4.3"]
dl = ["torch>=2.2"]
rl = ["gymnasium>=0.29", "stable-baselines3>=2.3"]
dev = ["pytest>=8.0", "ruff>=0.3", "mypy>=1.8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
[tool.setuptools.packages.find]
where = ["src"]
